--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,7 @@ dependencies:
 
   local_auth: ^2.3.0
 
-  mapbox_maps_flutter:
-    # When depending on this package from a real application you should use:
-    # mapbox_maps_flutter: ^x.y.z
-    path: ../
+  mapbox_maps_flutter: ^2.7.0
 
   cupertino_icons: ^1.0.2
   permission_handler: ^10.0.0
