🎯 Add cinematic fly-in and enable user location puck

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,13 +25,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Always and when in use!</string>
+	<string>We need your location to provide real-time navigation and interaction feature</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Can I haz location always?</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Older devices need location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Need location when in use</string>
+	<string>This app uses your location to center on map</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
