--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  geolocator: ^10.1.0
   local_auth: ^2.3.0
 
   mapbox_maps_flutter: ^2.7.0
